full height section mobile fix

--- a/scss/content-sections/_content-section.scss
+++ b/scss/content-sections/_content-section.scss
@@ -481,6 +481,13 @@ Default Content Section Styles
                     }
                 }
             }
+            .content-section__video-mobile-image {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+            }
         }
 
     }
